recaptcha alignment and IE8 issues

--- a/server/public/stylesheets/sass/cloud.rh.scss
+++ b/server/public/stylesheets/sass/cloud.rh.scss
@@ -1154,14 +1154,18 @@ label.error {
   line-height: 10pt;
 }
 
-#captcha {
+#captcha {  
   th {
     vertical-align: top;
   }
 }
 
+li.captcha {
+  overflow: visible;
+}
+
 #recaptcha_area {
-	margin: 0 0 0 10px;
+	margin: 0 0 0 5px;
 	float: left;
 	clear: right;
 }
